# TestQmlTask

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  qml.qrc
app/qml/: Constants.qml  main.qml
app/qml/components/: RecordView.qml  SaverControlPanel.qml
app/qml/delegates/: RecordDelegate.qml
app/qml/screens/: StartScreen.qml
core/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  ImageComparer.cpp  ImageComparer.h  ImageStorage.cpp  ImageStorage.h  Record.h  RecordModel.cpp  RecordModel.h  ScreenSaver.cpp  ScreenSaver.h
tests/: BaseComponentTest.cpp  CMakeLists.txt  TagTests.cpp
